# ocr_precedent

./: .gitignore  Cargo.toml  README.md
src/: main.rs
