[package]
name = "ocr_precedent"
version = "0.1.0"
edition = "2021"
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
rust = "1.64.0"
license = "MIT"
description = "判例のPDFをOCRでテキストに変換するプログラム"
readme = "README.md"
repository = "https://github.com/japanese-law-analysis/ocr_precedent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
regex = "1.7.1"
reqwest = "0.11.13"
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = "0.1.11"
